--- a/GuessTheWord/index.html
+++ b/GuessTheWord/index.html
@@ -17,6 +17,9 @@
   </head>
   <body>
     <div class="container">
+      <div class="incorrect-word">
+        Oh, parece que algo no esta bien ¡Puedes seguir intentandolo!
+      </div>
       <header class="header">
         <div class="timer">
           <p>00:00</p>
