Implement timer functionality and tweaks

--- a/GuessTheWord/index.html
+++ b/GuessTheWord/index.html
@@ -39,7 +39,7 @@
       <ion-icon class="reload-word-icon" name="reload-outline"></ion-icon>
     </div>
 
-    <div class="word-filled-correctly-dialog">
+    <div class="status-dialog">
       <p class="dialog-message">CONGRATULATIONS, YOU ARE CORRECT!</p>
       <button class="dialog-button">Continue</button>
     </div>
